Fix overflow in IE

--- a/less/widgets/images.less
+++ b/less/widgets/images.less
@@ -13,6 +13,7 @@
 
 .image-link {
     display: inline-block;
+    overflow: hidden;
 }
 
 
